Fix get ticket button appearance on iPhone

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -18,3 +18,10 @@
 @import "intro-modal";
 @import "prize-table";
 @import "ticket";
+
+button {
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  -moz-appearance: none;
+}
